# fastapi-bootcamp-g

./: .gitignore  LICENSE  README.md  database.py  gunicorn.conf.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
doc/: mkdocs.yml  requirement.txt
doc/docs/: index.md
doc/site/: 404.html  index.html  sample.drawio
doc/site/css/: custom.css
migrations/: env.py
migrations/versions/: 8c89f999e65a_create_todo_and_tag_association.py  b3de4e150509_create_todo_table.py  c17e0caaf823_create_tag_table.py  d1eb04f1c4b4_add_completed_to_todo.py
tool/thunder-client/: thunder-collection_fastapi-bootcamp.json
