[tool.poetry]
name = "fastapi-bootcamp"
version = "0.1.0"
description = "FastAPI Sample"
authors = ["ksomeya <k_someya@webfrontier.co.jp>"]
readme = "README.md"
packages = [{include = "fastapi_bootcamp"}]

[tool.poetry.dependencies]
python = "3.10.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.46"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
alembic = "^1.9.2"
debugpy = "^1.6.5"
fastapi-debug-toolbar = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
